* Changes in wtmpclean 0.6.7 -- Davide Madrisan (Nov 06 2009)
- Add ltype to utmpxlist structure.
- wtmpxdump(): parse RUN_LVL records to find for system reboots and halts
- Display "down" as logout time for all processes terminated by a system reboot/halt.
- dumprecord(): correctly display login times with negative values.

* Changes in wtmpclean 0.6.6 -- Davide Madrisan (Oct 29 2009)
- The ut_id, and ut_addr_v6 fields are also filled up with null bytes when removing an entry.
- The C locale is now used via setlocale precautionally.
- Fixed the gcc warnings shown by '-Wall -Wextra'.
- Better output in listening mode.
- Made the variables of type local when possible.

* Changes in wtmpclean 0.6.5 -- Davide Madrisan (Jan 15 2009)
- wtmpxlist() has been renamed to wtmpxdump().
- wtmpxdump(): Raw output highly improved.
- wtmpxdump(): Dump all the db if no user is specified.
- Always enable the `--raw' option (its code was previously in DEBUG blocks).
- Return `1' if wtmpedit() fails.
- Do not accept unknown fake users when patching the wtmp db.
- Remove the option `--preserve': always preserve timestamps.
- Declare the function `die()' as static and move its prototype to wtmpclean.c.

* Changes in wtmpclean 0.6.4 -- Davide Madrisan (Dec 25 2008)
- Now it's possible to replace a user in a given entry with another one.

* Changes in wtmpclean 0.6.3 -- Davide Madrisan (Apr 25 2008)
- Print the list of user sessions formatting the data as `last' does.
- Fixed autoconf 2.62 warnings.
- New option '-r' (or '--raw') for displaying the raw content of the wtmp db in DEBUG mode.
- New option '-t' (or '--time') to delete a login occurred at a specified time.
- Report "gone - no logout" instead of "still logged in" if the login process is not alive.

* Changes in wtmpclean 0.6.2 -- Davide Madrisan (Mar 17 2008)
- Define UTMPXNAME according to the build environment.
- Moved DEFAULT_WTMP definitions to wtmpclean.h